fixed dark mode settings

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-/*  */
 @import "tailwindcss";
+@tailwind components;
+@tailwind utilities;
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -15,16 +16,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
- 
 
 body,
 html,
@@ -59,14 +50,9 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* light mode settings */
+}
+
+@media (prefers-color-scheme: dark) {
+/* dark mode settings */
 }
